--- a/Kip.Utils.WechatOfficialAccount/Kip.Utils.WechatOfficialAccount.csproj
+++ b/Kip.Utils.WechatOfficialAccount/Kip.Utils.WechatOfficialAccount.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9057F342-06E8-48B4-8560-E9A1F15D553B}</ProjectGuid>
+    <ProjectGuid>{2F6EDFAB-1ABA-406C-91C1-EBCEB7DA6ED1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kip.Utils.Payment</RootNamespace>
-    <AssemblyName>Kip.Utils.Payment</AssemblyName>
+    <RootNamespace>Kip.Utils.WechatOfficialAccount</RootNamespace>
+    <AssemblyName>Kip.Utils.WechatOfficialAccount</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AopSdk">
-      <HintPath>..\Libs\AopSdk.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -43,15 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AliPay\AliPayConfig.cs" />
-    <Compile Include="AliPay\AliPayUtils.cs" />
-    <Compile Include="PaymentOrder.cs" />
-    <Compile Include="PaymentTools.cs" />
+    <Compile Include="Api\CoreApi.cs" />
+    <Compile Include="Api\MessageApi.cs" />
+    <Compile Include="Models\Exceptions\WechatApiException.cs" />
+    <Compile Include="Models\Requests\TextRequestModel.cs" />
+    <Compile Include="Models\Responses\AccessTokenResponse.cs" />
+    <Compile Include="Models\Responses\ApiResponseBase.cs" />
+    <Compile Include="Models\Responses\GetCallbackIpResponse.cs" />
+    <Compile Include="Models\Responses\MessageReponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WechatPay\Models\OrderDetail.cs" />
-    <Compile Include="WechatPay\Models\QueryOrder.cs" />
-    <Compile Include="WechatPay\Models\UnifiedOrder.cs" />
-    <Compile Include="WechatPay\WechatPayUtils.cs" />
+    <Compile Include="Test\TestCore.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kip.Utils.Core\Kip.Utils.Core.csproj">
