--- a/Kip.Utils.Payment/Kip.Utils.Payment.csproj
+++ b/Kip.Utils.Payment/Kip.Utils.Payment.csproj
@@ -48,6 +48,7 @@
     <Compile Include="PaymentOrder.cs" />
     <Compile Include="PaymentTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test\AliPayTest.cs" />
     <Compile Include="WechatPay\Models\OrderDetail.cs" />
     <Compile Include="WechatPay\Models\QueryOrder.cs" />
     <Compile Include="WechatPay\Models\UnifiedOrder.cs" />
