--- a/Kip.Utils.WechatOfficialAccount/Kip.Utils.WechatOfficialAccount.csproj
+++ b/Kip.Utils.WechatOfficialAccount/Kip.Utils.WechatOfficialAccount.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Models\Responses\GetCallbackIpResponse.cs" />
     <Compile Include="Models\Responses\MessageReponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test\TestCore.cs" />
+    <Compile Include="Test\TestMain.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kip.Utils.Core\Kip.Utils.Core.csproj">
