--- a/Kip.Utils.Core/Kip.Utils.Core.csproj
+++ b/Kip.Utils.Core/Kip.Utils.Core.csproj
@@ -53,11 +53,13 @@
     <Compile Include="PredicateBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityUtils.cs" />
+    <Compile Include="Test\TestX509.cs" />
     <Compile Include="XmlUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
